--- a/style.css
+++ b/style.css
@@ -78,6 +78,15 @@ body {
     margin: 3em auto;
 }
 
+.contact-link {
+    color: #a4d9f5;
+}
+
+.contact-link:hover,
+.contact-link:focus {
+    opacity: 0.7;
+}
+
 #work {
     background-color: #5e7f93
 }
